--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="EDAFormer (ECCV 2024)"/>
   <meta property="og:description" content="Project page for EDAFormer (ECCV 2024)"/>
   <meta name="og:image" content="static/images/eccv_isr.png">
-  <meta property="og:url" content="https://yubin1219.github.io/edaformer.github.io/"/>
+  <meta property="og:url" content="https://yubin1219.github.io/edaformer/"/>
   
 
 
