--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
             <!-- Your image here -->
             <img src="static/images/visualization_feature.png" alt="feature"/>
             <h3 class="subtitle has-text-left">
-              <small><strong>Figure 5. Visualization of the attention score map, output features, and prediction map.</strong></small> <small>‘Base’ represents our EDAFormer trained with the base reduction ratio of [8,4,2,1]-[1,2,4]. ‘w/ ISR’ represents our EDAFormer applied our ISR method.</small>
+              <small><strong>Figure 5. Visualization of the attention score map, output features, and prediction map.</strong></small>
+              <br> <small>Compared to the similarity scores without applying our ISR, the similarity scores between the query and key applying ISR were well maintained. The information obtained from the self-attention operation is maintained even though the spatial reduction is applied to the key and value <strong>at the inference phase.</strong></small>
             </h3>
           </div>
           <div class="item">
