--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
           </div>
           <div class="item">
             <!-- Your image here -->
-            <img src="static/images/qual_.png" alt="quali"/>
+            <img src="static/images/fig8.png" alt="quali"/>
             <h3 class="subtitle has-text-justified"><br>
-              <small><strong>Figure 6. Qualitative results on ADE20K, Cityscapes, and COCO-Stuff.</strong></small> <small>Compared to SegFormer, the predictions of our EDAFormer are more precise for various categories.</small>
+              <small><strong>Figure 6. Qualitative results on ADE20K, Cityscapes, and COCO-Stuff.</strong></small> <small>Compared to SegFormer and FeedFormer, the predictions of our EDAFormer are more precise for various categories.</small>
             </h3>
           </div>
           
