--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
             <!-- Your image here -->
             <img src="static/images/visualization_feature.png" alt="feature"/>
             <h3 class="subtitle has-text-left">
-              <small><strong>Figure 5. Visualization of the attention score map, output features, and prediction map.</strong></small><small>Compared to without applying our ISR, the attention scores and output features of the self-attention with ISR were well maintained. The information obtained from the self-attention operation is maintained even though the spatial reduction is applied to the key and value <strong>at the inference phase.</strong></small>
+              <small><strong>Figure 5. Visualization of the attention score map, output features, and prediction map.</strong></small> <small>Compared to without applying our ISR, the attention scores and output features of the self-attention with ISR were well maintained. The information obtained from the self-attention operation is maintained even though the spatial reduction is applied to the key and value <strong>at the inference phase.</strong></small>
             </h3>
           </div>
           <div class="item">
             <!-- Your image here -->
             <img src="static/images/fig8.png" alt="quali"/>
-            <h3 class="subtitle has-text-justified"><br>
+            <h3 class="subtitle has-text-left"><br>
               <small><strong>Figure 6. Qualitative results on ADE20K, Cityscapes, and COCO-Stuff.</strong></small> <small>Compared to SegFormer and FeedFormer, the predictions of our EDAFormer are more precise for various categories.</small>
             </h3>
           </div>
