--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <!-- Your image here -->
             <img src="static/images/fig8.png" alt="quali"/>
             <h3 class="subtitle has-text-left"><br>
-              <small><strong>Figure 6. Qualitative results on ADE20K, Cityscapes, and COCO-Stuff.</strong></small> <small>Compared to SegFormer and FeedFormer, the predictions of our EDAFormer are more precise for various categories.</small>
+              <small><strong>Figure 6. Qualitative comparison on ADE20K, Cityscapes, and COCO-Stuff datasets.</strong></small> <small>Compared to SegFormer and FeedFormer, the predictions of our EDAFormer are more precise for various categories.</small>
             </h3>
           </div>
           
