--- a/index.html
+++ b/index.html
@@ -112,11 +112,15 @@
               </span>
             </div>
           </div>
+            <div><center>
+            <img src="static/images/quali_.png" alt="qual"/>
+            </center> </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 
 
 <!-- Paper abstract -->
