--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
           </div>
             <div><center>
-            <img src="static/images/quali_.png" alt="qual"/>
+            <img src="static/images/qual_.png" alt="qual"/>
             </center> </div>
         </div>
       </div>
