--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </span>
             </div>
           </div>
-            <div><center>
+            <div class="image"><center>
             <img src="static/images/qual_.png" alt="qual"/>
             </center> </div>
         </div>
