--- a/index.html
+++ b/index.html
@@ -245,8 +245,14 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           <h2 class="title is-3">Experimental Results</h2>
-            <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
-          
+          <div class="image">
+          <center>
+            <img src="static/images/table1_graph.png" alt="table1"/>
+          </center>
+          </div>
+          <div class="content has-text-centered">
+            <p><strong>Table 1.</strong> Performance comparison with the transformer-based state-of-the-art semantic segmentation models & Performance-Computation curves of our EDAFormer and the existing segmentation models.</p>
+          </div>
         </div>
       </div>
     </div>
