--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <img src="static/images/table1_graph.png" alt="table1"/>
           </center>
           </div>
-          <div class="content has-text-centered">
+          <div class="content has-text-left">
             <p><strong>Table 1.</strong> Performance comparison with the transformer-based state-of-the-art semantic segmentation models & Performance-Computation curves of our EDAFormer and the existing segmentation models.</p>
           </div>
         </div>
