--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
           </center>
           </div>
           <div class="content has-text-left">
-            <p><strong>Table 1.</strong> Performance comparison with the transformer-based state-of-the-art semantic segmentation models & Performance-Computation curves of our EDAFormer and the existing segmentation models.</p>
+            <p><strong>Table 1.</strong> Performance comparison with the transformer-based state-of-the-art semantic segmentation models & Performance-Computation curves of our EDAFormer and existing segmentation models.</p>
           </div>
         </div>
       </div>
