--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           <h2 class="title is-3">Experimental Results</h2>
           <div class="image">
           <center>
-            <img src="static/images/table1_graph.png" alt="table1"/>
+            <img src="static/images/table.png" alt="table1"/>
           </center>
           </div>
           <div class="content has-text-left">
