--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 <!-- Experimental -->
 <section class="hero">
   <div class="hero-body">
-    <div class="container is-max-desktop">
+    <div class="container">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           <h2 class="title is-3">Experimental Results</h2>
