--- a/index.html
+++ b/index.html
@@ -190,44 +190,44 @@
 
 
 <!-- Image carousel -->
-<section class="hero">
-  <div class="hero-body">
-    <div class="container">
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          <h2 class="title is-3">Overviews</h2>
-          <div class="image">
-            <center>
-            <img src="static/images/architecture2.png" alt="Overall architecture"/>
-            </center>
-          </div>
-          <div class="content has-text-centered">
-            <p><strong>Figure 1. (a) Overall architeucture of EDAFormer (b) Details of Embedding-Free Transformer (EFT) block</strong></p>
-          </div>
+<!-- <section class="hero">-->
+  <!-- <div class="hero-body">-->
+    <!-- <div class="container">-->
+     <!--  <div class="columns is-centered has-text-centered">-->
+       <!--  <div class="column is-four-fifths">-->
+         <!--  <h2 class="title is-3">Overviews</h2>-->
+         <!--  <div class="image">-->
+           <!--  <center>-->
+          <!--   <img src="static/images/architecture2.png" alt="Overall architecture"/>-->
+           <!--  </center>-->
+         <!--  </div>-->
+         <!--  <div class="content has-text-centered">-->
+          <!--   <p><strong>Figure 1. (a) Overall architeucture of EDAFormer (b) Details of Embedding-Free Transformer (EFT) block</strong></p>-->
+        <!--   </div>-->
           
-          <div class="image" >
-              <center>
-              <img src="static/images/efa.png" style="width:388px;height:246px;" />
-              </center>
-          </div>
-          <div class="content has-text-centered">
-            <p><strong>Figure 2. Comparison of the previous attention structure and our EFA structure</strong></p>
-          </div>   
+         <!--  <div class="image" >-->
+             <!--  <center>-->
+             <!--  <img src="static/images/efa.png" style="width:388px;height:246px;" />-->
+             <!--  </center>-->
+         <!--  </div>-->
+         <!--  <div class="content has-text-centered">-->
+          <!--   <p><strong>Figure 2. Comparison of the previous attention structure and our EFA structure</strong></p>-->
+         <!--  </div>   -->
         
-          <div class="image">
-            <center>
-              <img src="static/images/eccv_isr.png" alt="ISR" />
-            </center>
-          </div>
-          <div class="content has-text-left">
-              <p><strong>Figure 3. Overview of ISR method at the 1st stage of the encoder</strong> Our ISR adjusts the reduction ratio at the inference, reducing the key and value tokens selectively. This framework can be performed at every stage that contains the self-attention structure. It leads to flexibly reduce the computational cost without disrupting the spatial structure. 
-              </p>
-          </div> 
-        </div>
-      </div>
-  </div>
-</div>
-</section>
+        <!--   <div class="image">-->
+        <!--     <center>-->
+         <!--      <img src="static/images/eccv_isr.png" alt="ISR" />-->
+          <!--   </center>-->
+        <!--   </div>-->
+       <!--    <div class="content has-text-left">-->
+         <!--      <p><strong>Figure 3. Overview of ISR method at the 1st stage of the encoder</strong> Our ISR adjusts the reduction ratio at the inference, reducing the key and value tokens selectively. This framework can be performed at every stage that contains the self-attention structure. It leads to flexibly reduce the computational cost without disrupting the spatial structure. -->
+         <!--      </p>-->
+      <!--     </div> -->
+      <!--   </div>-->
+     <!--  </div>-->
+ <!--  </div>-->
+<!-- </div>-->
+<!-- </section>-->
 <!-- End image carousel -->
 
 <!-- Image carousel -->
