--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <p><strong>Figure 2. (a) Overall architeucture of EDAFormer (b) Details of Embedding-Free Transformer block</strong></p>
           </div>
           <br><br>
-          <strong><font color="#9C72F0>3. We present Inference Spatial Reduction (ISR) method,</font></strong> which reduces the key-value spatial resolution more at the inference phase than the training phase. ISR enables the models to reduce the computational cost with less degradation in segmentation performance at the inference phase. Without additional training, ISR allows to selectively adjust computational costs of the trained model. 
+          <strong><font color="#9C72F0">3. We present Inference Spatial Reduction (ISR) method,</font></strong> which reduces the key-value spatial resolution more at the inference phase than the training phase. ISR enables the models to reduce the computational cost with less degradation in segmentation performance at the inference phase. Without additional training, ISR allows to selectively adjust computational costs of the trained model. 
           <div class="image">
             <center><br>
               <img src="static/images/eccv_isr.png" alt="ISR" />
