--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <p><strong>Figure 2. (a) Overall architeucture of EDAFormer (b) Details of Embedding-Free Transformer block</strong></p>
           </div>
           <br><br>
-          <strong><font color="#9C72F0">3. We present Inference Spatial Reduction (ISR) method,</font></strong> which reduces the key-value spatial resolution more at the inference phase than the training phase. ISR enables the models to reduce the computational cost with less degradation in segmentation performance at the inference phase. Without additional training, ISR allows to selectively adjust computational costs of the trained model. 
+          <strong><font color="#915CFA">3. We present Inference Spatial Reduction (ISR) method,</font></strong> which reduces the key-value spatial resolution more at the inference phase than the training phase. ISR enables the models to reduce the computational cost with less degradation in segmentation performance at the inference phase. Without additional training, ISR allows to selectively adjust computational costs of the trained model. 
           <div class="image">
             <center><br>
               <img src="static/images/eccv_isr.png" alt="ISR" />
@@ -179,7 +179,7 @@
               <p><strong>Figure 3. Overview of ISR method at the 1st stage of the encoder.</strong> Our ISR adjusts the reduction ratio at the inference, reducing the key and value tokens selectively. This framework can be performed at every stage that contains the self-attention structure. It leads to flexibly reduce the computational cost without disrupting the spatial structure. 
               </p>
           </div> 
-          <br><br><strong>4. EDAFormer surpasses the previous transformer-based segmentation models in terms of both efficiency and accuracy</strong> on ADE20K, Cityscapes and COCO-Stuff benchmarks.
+          <br><br><strong><font color="#B73D1F">4. EDAFormer surpasses the previous transformer-based segmentation models in terms of both efficiency and accuracy</font></strong> on ADE20K, Cityscapes and COCO-Stuff benchmarks.
           </p>
         </div>
       </div>
