--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <h2 class="title is-3">🔥 Highlights</h2>
         <div class="content has-text-left">
           <p>
-            <strong><font color="#EFC35D">1. We propose a novel Embedding-Free Attention (EFA) structure</font></strong>, which removes the embeddings of the query, key and value in the attention mechanism. EFA leads to the competitive performance on image classification and semantic segmentation tasks. We empirically find that EFA is effective for our ISR in terms of considering the trade-off between computation and performance degradation. 
+            <strong><font color="#F7C54E">1. We propose a novel Embedding-Free Attention (EFA) structure</font></strong>, which removes the embeddings of the query, key and value in the attention mechanism. EFA leads to the competitive performance on image classification and semantic segmentation tasks. We empirically find that EFA is effective for our ISR in terms of considering the trade-off between computation and performance degradation. 
             <div class="image" >
               <center>
               <img src="static/images/efa.png" style="width:388px;height:246px;" />
