--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <p><strong>Figure 1. Comparison of the previous attention structure and our EFA structure</strong></p>
           </div>   
             <br><br>
-            <strong>2. We present EDAFormer</strong>, a powerful semantic segmentation model with the proposed Embedding-Free Transformer encoder and all-attention decoder. The all-attention decoder exploits the more number of the proposed EFA module at the higher level to capture the global context more effectively. 
+            <strong><font color="#8B55C1">2. We present EDAFormer</font></strong>, a powerful semantic segmentation model with the proposed Embedding-Free Transformer encoder and all-attention decoder. The all-attention decoder exploits the more number of the proposed EFA module at the higher level to capture the global context more effectively. 
           <div class="image">
             <center>
             <img src="static/images/architecture2.png" alt="Overall architecture"/>
