--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <p><strong>Figure 1. Comparison of the previous attention structure and our EFA structure</strong></p>
           </div>   
             <br><br>
-            <strong><font color="#8B55C1">2. We present EDAFormer</font></strong>, a powerful semantic segmentation model with the proposed Embedding-Free Transformer encoder and all-attention decoder. The all-attention decoder exploits the more number of the proposed EFA module at the higher level to capture the global context more effectively. 
+            <strong><font color="#F7C54E">2. We present EDAFormer</font></strong>, a powerful semantic segmentation model with the proposed Embedding-Free Transformer encoder and all-attention decoder. The all-attention decoder exploits the more number of the proposed EFA module at the higher level to capture the global context more effectively. 
           <div class="image">
             <center>
             <img src="static/images/architecture2.png" alt="Overall architecture"/>
@@ -169,7 +169,7 @@
             <p><strong>Figure 2. (a) Overall architeucture of EDAFormer (b) Details of Embedding-Free Transformer block</strong></p>
           </div>
           <br><br>
-          <strong><font color="#915CFA">3. We present Inference Spatial Reduction (ISR) method,</font></strong> which reduces the key-value spatial resolution more at the inference phase than the training phase. ISR enables the models to reduce the computational cost with less degradation in segmentation performance at the inference phase. Without additional training, ISR allows to selectively adjust computational costs of the trained model. 
+          <strong><font color="#F7C54E">3. We present Inference Spatial Reduction (ISR) method,</font></strong> which reduces the key-value spatial resolution more at the inference phase than the training phase. ISR enables the models to reduce the computational cost with less degradation in segmentation performance at the inference phase. Without additional training, ISR allows to selectively adjust computational costs of the trained model. 
           <div class="image">
             <center><br>
               <img src="static/images/eccv_isr.png" alt="ISR" />
@@ -179,7 +179,7 @@
               <p><strong>Figure 3. Overview of ISR method at the 1st stage of the encoder.</strong> Our ISR adjusts the reduction ratio at the inference, reducing the key and value tokens selectively. This framework can be performed at every stage that contains the self-attention structure. It leads to flexibly reduce the computational cost without disrupting the spatial structure. 
               </p>
           </div> 
-          <br><br><strong><font color="#B73D1F">4. EDAFormer surpasses the previous transformer-based segmentation models in terms of both efficiency and accuracy</font></strong> on ADE20K, Cityscapes and COCO-Stuff benchmarks.
+          <br><br><strong><font color="#F7C54E">4. EDAFormer surpasses the previous transformer-based segmentation models in terms of both efficiency and accuracy</font></strong> on ADE20K, Cityscapes and COCO-Stuff benchmarks.
           </p>
         </div>
       </div>
