--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <h2 class="title is-3">🔥 Highlights</h2>
         <div class="content has-text-left">
           <p>
-            <strong><font color="#E8B81C">1. We propose a novel Embedding-Free Attention (EFA) structure</font></strong>, which removes the embeddings of the query, key and value in the attention mechanism. EFA leads to the competitive performance on image classification and semantic segmentation tasks. We empirically find that EFA is effective for our ISR in terms of considering the trade-off between computation and performance degradation. 
+            <strong><font color="#D2AB5B">1. We propose a novel Embedding-Free Attention (EFA) structure</font></strong>, which removes the embeddings of the query, key and value in the attention mechanism. EFA leads to the competitive performance on image classification and semantic segmentation tasks. We empirically find that EFA is effective for our ISR in terms of considering the trade-off between computation and performance degradation. 
             <div class="image" >
               <center>
               <img src="static/images/efa.png" style="width:388px;height:246px;" />
@@ -159,7 +159,7 @@
             <p><strong>Figure 1. Comparison of the previous attention structure and our EFA structure</strong></p>
           </div>   
             <br><br>
-            <strong><font color="#EEAC2A">2. We present EDAFormer</font></strong>, a powerful semantic segmentation model with the proposed Embedding-Free Transformer encoder and all-attention decoder. The all-attention decoder exploits the more number of the proposed EFA module at the higher level to capture the global context more effectively. 
+            <strong><font color="#D2AB5B">2. We present EDAFormer</font></strong>, a powerful semantic segmentation model with the proposed Embedding-Free Transformer encoder and all-attention decoder. The all-attention decoder exploits the more number of the proposed EFA module at the higher level to capture the global context more effectively. 
           <div class="image">
             <center>
             <img src="static/images/architecture2.png" alt="Overall architecture"/>
@@ -179,7 +179,7 @@
               <p><strong>Figure 3. Overview of ISR method at the 1st stage of the encoder.</strong> Our ISR adjusts the reduction ratio at the inference, reducing the key and value tokens selectively. This framework can be performed at every stage that contains the self-attention structure. It leads to flexibly reduce the computational cost without disrupting the spatial structure. 
               </p>
           </div> 
-          <br><br><strong><font color="#F7C54E">4. EDAFormer surpasses the previous transformer-based segmentation models in terms of both efficiency and accuracy</font></strong> on ADE20K, Cityscapes and COCO-Stuff benchmarks.
+          <br><br><strong><font color="#D2AB5B">4. EDAFormer surpasses the previous transformer-based segmentation models in terms of both efficiency and accuracy</font></strong> on ADE20K, Cityscapes and COCO-Stuff benchmarks.
           </p>
         </div>
       </div>
