--- a/index.html
+++ b/index.html
@@ -244,6 +244,14 @@
           <div class="content has-text-left">
             <p><strong>Table 1.</strong> Performance comparison with the transformer-based state-of-the-art semantic segmentation models & Performance-Computation curves of our EDAFormer and existing segmentation models.</p>
           </div>
+          <div class="image">
+          <center>
+            <img src="static/images/table2.png" alt="table2"/>
+          </center>
+          </div>
+          <div class="content has-text-left">
+            <p><strong>Table 2.</strong> Performance comparison with the previous classification models on ImageNet.</p>
+          </div>
         </div>
       </div>
     </div>
