--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </div>
           <div class="image">
           <center>
-            <img src="static/images/table2.png" alt="table2"/>
+            <img src="static/images/table2.png" alt="table2" style="width:445px;height:391px;" />
           </center>
           </div>
           <div class="content has-text-left">
