--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <img src="static/images/table2.png" alt="table2" style="width:445px;height:391px;" />
           </center>
           </div>
-          <div class="content has-text-left">
+          <div class="content has-text-centered">
             <p><strong>Table 2.</strong> Performance comparison with the previous classification models on ImageNet.</p>
           </div>
         </div>
