--- a/index.html
+++ b/index.html
@@ -252,6 +252,14 @@
           <div class="content has-text-centered">
             <p><strong>Table 2.</strong> Performance comparison with the previous classification models on ImageNet.</p>
           </div>
+          <div class="image">
+          <center>
+            <img src="static/images/table4.png" alt="table4" />
+          </center>
+          </div>
+          <div class="content has-text-left">
+            <p><strong>Table 3.</strong> Computation and performance of EDAFormer with ISR on three standard benchmarks. † indicates 'w/o ISR' where the same reduction ratio is applied at training and inference. ⋆ indicates the fine-tuning. Bold is optimal inference reduction ratio for our EDAFormer.</p>
+          </div>
         </div>
       </div>
     </div>
