--- a/index.html
+++ b/index.html
@@ -260,6 +260,14 @@
           <div class="content has-text-left">
             <p><strong>Table 3.</strong> Computation and performance of EDAFormer with ISR on three standard benchmarks. † indicates 'w/o ISR' where the same reduction ratio is applied at training and inference. ⋆ indicates the fine-tuning. Bold is optimal inference reduction ratio for our EDAFormer.</p>
           </div>
+          <div class="image">
+          <center>
+            <img src="static/images/table4.png" alt="table4" />
+          </center>
+          </div>
+          <div class="content has-text-left">
+            <p><strong>Table 4. (a) Performance comparison of our model with ISR and our model trained with the increased reduction ratio. (b) Ablation on the effectiveness of our EFA for our ISR.</strong> </p>
+          </div>
         </div>
       </div>
     </div>
