--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           </center>
           </div>
           <div class="content has-text-left">
-            <p><strong>Table 4. (a) Performance comparison of our model with ISR and our model trained with the increased reduction ratio. (b) Ablation on the effectiveness of our EFA for our ISR.</strong> </p>
+            <p><strong>Table 4.</strong> (a) Performance comparison of our model with ISR and our model trained with the increased reduction ratio. (b) Ablation on the effectiveness of our EFA for our ISR. </p>
           </div>
         </div>
       </div>
