--- a/index.html
+++ b/index.html
@@ -268,6 +268,14 @@
           <div class="content has-text-left">
             <p><strong>Table 4.</strong> (a) Performance comparison of our model with ISR and our model trained with the increased reduction ratio. (b) Ablation on the effectiveness of EFA for ISR. Our EFA structure is effective for applying our ISR method. </p>
           </div>
+          <div class="image">
+          <center>
+            <img src="static/images/table7.png" alt="table7" />
+          </center>
+          </div>
+          <div class="content has-text-centered">
+            <p><strong>Table 5.</strong> </p>
+          </div>
         </div>
       </div>
     </div>
