--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           </div>
           <div class="image">
           <center>
-            <img src="static/images/table7.png" alt="table7" />
+            <img src="static/images/table7.png" alt="table7" style="width:206px;height:167px;" />
           </center>
           </div>
           <div class="content has-text-centered">
