--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           </center>
           </div>
           <div class="content has-text-centered">
-            <p><strong>Table 5.</strong> </p>
+            <p><strong>Table 5.</strong> Applying our ISR without finetuning to various transformer-based models. These results show the generalizability of our ISR.</p>
           </div>
         </div>
       </div>
