--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           </div>
           <div class="image">
           <center>
-            <img src="static/images/table4.png" alt="table4" />
+            <img src="static/images/table4.png" alt="table4" style="width:908px;height:305px;" />
           </center>
           </div>
           <div class="content has-text-left">
