--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           </div>
           <div class="image">
           <center>
-            <img src="static/images/table5.png" alt="table5" />
+            <img src="static/images/table5.png" alt="table5" style="width:908px;height:190px;" />
           </center>
           </div>
           <div class="content has-text-left">
