--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=c-4JTUkAAAAJ&hl=ko&oi=sra" target="_blank">Hyunwoo Yu</a><sup>*1</sup>,</span>
+                <a href="https://scholar.google.com/citations?user=c-4JTUkAAAAJ&hl=ko&oi=sra" target="_blank">Hyunwoo Yu</a><sup>1*</sup>,</span>
                 <span class="author-block">
-                  <a href="https://scholar.google.com/citations?user=qRjx9NkAAAAJ&hl=ko&oi=sra" target="_blank">Yubin Cho</a><sup>*1,2</sup>,</span>
+                  <a href="https://scholar.google.com/citations?user=qRjx9NkAAAAJ&hl=ko&oi=sra" target="_blank">Yubin Cho</a><sup>1,2*</sup>,</span>
                   <span class="author-block">
-                    <a href="https://scholar.google.com/citations?user=XKx-Di4AAAAJ&hl=ko&oi=sra" target="_blank">Beoungwoo Kang</a><sup>*1</sup>,</span>
+                    <a href="https://scholar.google.com/citations?user=XKx-Di4AAAAJ&hl=ko&oi=sra" target="_blank">Beoungwoo Kang</a><sup>1*</sup>,</span>
                     <span class="author-block">
-                      <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Seunghun Moon</a><sup>*1</sup>,</span>
+                      <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Seunghun Moon</a><sup>1*</sup>,</span>
                       <span class="author-block">
-                        <a href="https://scholar.google.com/citations?user=O9QSF7UAAAAJ&hl=ko&oi=sra" target="_blank">Kyeongbo Kong</a><sup>*3</sup>,</span>
+                        <a href="https://scholar.google.com/citations?user=O9QSF7UAAAAJ&hl=ko&oi=sra" target="_blank">Kyeongbo Kong</a><sup>3*</sup>,</span>
                         <span class="author-block">
                         <a href="https://scholar.google.com/citations?user=3WYxpuYAAAAJ&hl=ko&oi=sra" target="_blank">Suk-Ju Kang</a><sup>1</sup>
                   </span>
